<resources>
    <string name="app_name">APMManage</string>
    <string name="title_activity_home_page">Home_page</string>
    <string name="navigation_drawer_open">فتح القائمة</string>
    <string name="navigation_drawer_close">إغلاق القائمة</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_products_page">products_page</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="pro_count_db">الكمية</string>
    <string name="pro_name_db">اسم الصنف</string>
    <string name="pro_list">قائمة الاصناف</string>
    <string name="pro_hint_txt">ادخل اسم الصنف</string>
    <string name="sell_price">سعر البيع</string>
    <string name="lbl_bee3">بيع</string>
    <string name="lbl_taklefa">تكلفة</string>
    <string name="taklefa_price">سعر التكلفة</string>
    <string name="lbl_count">كمية</string>
    <string name="count_txt">الكمية</string>
    <string name="stock_txt">الفرع</string>
    <string name="cst_name_t">اسم العميل</string>
    <string name="fatora_num">رقم الفاتورة</string>
    <string name="cst_phone">تليفون العميل</string>
    <string name="cst_address">عنوان العميل</string>
    <string name="lbl_unit_price">سعر الوحدة</string>
    <string name="UP_TXT">بيع الوحدة</string>
    <string name="sales_list">قائمة المبيعات</string>
    <string name="fatora_num_hint">ادخل رقم الفاتورة</string>
    <string name="title_activity_all_sales">AllSalesActivity</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_barcode_cativity">Barcode_cativity</string>
    <string name="scan_btn_txt">Scan Barcode</string>
    <string name="dummy_content">DUMMY CONTENT</string>
    <string name="title_AddProductActivity">add product</string>
    <string name="title_MadeenActivity">قائمة المدينين</string>

    <string name="sales_report">تقارير المبيعات</string>
    <string name="export_report">تصدير التقرير</string>
    <string name="search_type">نوع البحث</string>
    <string name="from_date">من تاريخ</string>
    <string name="to_date">إلى تاريخ</string>
    <string name="search">بحث</string>
    <string name="show_report">عرض التقرير</string>
    <string name="load_more">تحميل المزيد</string>
    <string name="invoice_number">رقم الفاتورة</string>
    <string name="date">التاريخ</string>
    <string name="customer_name">اسم العميل</string>
    <string name="product">المنتج</string>
    <string name="quantity">الكمية</string>
    <string name="price">السعر</string>
    <string name="price_for_sell">الاجمالي</string>
    <string name="remaining">الباقي</string>
    <string name="invoice_type">نوع الفاتورة</string>
    <string name="total_sales">إجمالي المبيعات:</string>
    <string name="total_paid">إجمالي المدفوع:</string>
    <string name="total_remaining">إجمالي الباقي:</string>
    <string name="purchases_report">تقرير المشتريات</string>
    <string name="supplier_name">اسم المورد</string>
    <string name="notes">ملاحظات</string>
    <string name="total_purchases">إجمالي المشتريات:</string>
    <string name="title_Da2n_Activity">قائمة الدائنين</string>
    <string name="Income_report">الوارد للخزينة</string>
    <string name="Outcome_report">الصادر من الخزينة</string>
    <string name="profits_report">عرض الارباح</string>
    <string name="most7kat_madeenen">كشف حساب مدين</string>
    <string name="pay_madeen">سداد من الحساب</string>
    <string name="pay_da2n">سداد من الحساب</string>
    <string name="most7kat_da2neen">كشف حساب دائن</string>
    <string name="safe_status">حالة الخزينة</string>
    <string name="add_to_income">إضافة مبلغ للخزينة</string>
    <string name="sarf_from_outcome">صرف مبلغ من الخزينة</string>
    <string name="sell_activity">فاتورة بيع</string>
    <string name="title_PayKestActivity">سداد قسط</string>
    <string name="title_AksatSummaryActivity">احصائيات الأقساط</string>
    <string name="title_HalekShowActivity">عرض الهالك</string>
    <string name="title_CustomersShowActivity">قائمة العملاء</string>
    <string name="title_SuppliersShowActivity">قائمة الموردين</string>
    <string name="title_LoansUnderRevisionActivity">العمليات</string>
    <string name="title_DelayedAksatActivity">الاقساط المتأخرة</string>
    <string name="title_LoanAksatShowActivity">بيان حالة عميل</string>


</resources>
